# codecanvas

./: .gitignore  NORTH_STAR.md  README.md  SPEC.md  TODO.md  VISION.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test_phase1.py
core/: README.md  pyproject.toml
core/codecanvas/: __init__.py
core/codecanvas/graph/: ast_execution.py  builder.py  cfg.py  impact.py  models.py
core/codecanvas/mcp/: queries.py  server.py  session.py
core/codecanvas/parser/: call_graph.py  entrypoint_extractor.py  fastapi_extractor.py
core/codecanvas/server/: app.py
core/codecanvas/tracer/: __init__.py  collector.py  mapper.py  middleware.py
core/codecanvas_mcp/: __init__.py
core/codecanvas_mcp/graph/: ast_execution.py  builder.py  cfg.py  execution.py  impact.py  models.py
core/codecanvas_mcp/mcp/: __init__.py  answers.py  outline.py  queries.py  server.py  session.py  simulator.py
core/codecanvas_mcp/parser/: call_graph.py  entrypoint_extractor.py  fastapi_extractor.py  openapi_enricher.py
core/codecanvas_mcp/server/: app.py
core/codecanvas_mcp/tracer/: __init__.py  app_discovery.py  collector.py  mapper.py  middleware.py  models.py
core/tests/: test_resolve_function.py
extension/: .vscodeignore  README.md  package.json
sample-script/: helpers.py  process_batch.py
scripts/: sync-core.mjs
tests/: test_cache_and_throttle.py  test_call_graph_resolution.py  test_cfg_correctness.py  test_data_flow.py  test_di_resolution.py  test_dispatch_and_cfg.py  test_function_entrypoint_resolution.py  test_impact_analysis.py  test_integration_smoke.py  test_mcp_accessors.py  test_mcp_answers.py  test_mcp_function_flow.py  test_mcp_impact_decouple.py  test_mcp_queries.py  test_mcp_server.py  test_mcp_session.py  test_mcp_simulator.py  test_resolver_ranking.py  test_response_origin.py  test_review_summary.py  (+4 more)
(+65 files in other folders)
