[project]
name = "codecanvas"
version = "0.1.0"
description = "Python request flow explainer for FastAPI"
requires-python = ">=3.10"
dependencies = [
    "libcst>=1.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
server = [
    "fastapi",
    "uvicorn",
    "httpx>=0.24.0",
]
dev = [
    "pytest",
    "codecanvas[server]",
]

[project.scripts]
codecanvas = "codecanvas.server.app:main"
codecanvas-mcp = "codecanvas.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
