[project]
name = "codecanvas-mcp"
version = "0.1.10"
description = "Precision static-analysis MCP server for Python: call graphs, control flow, and change impact"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "libcst>=1.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
server = [
    "fastapi",
    "uvicorn",
    "httpx>=0.24.0",
]
dev = [
    "pytest",
    "codecanvas-mcp[server]",
]

[project.urls]
Repository = "https://github.com/donggyun112/codecanvas"
Issues = "https://github.com/donggyun112/codecanvas/issues"

[project.scripts]
codecanvas = "codecanvas_mcp.server.app:main"
codecanvas-mcp = "codecanvas_mcp.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
